# ghc-gc-test

./: .gitignore  bench.sh  gc-test.cabal
src/: Main.hs  bench.sh
